5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1649_2703.log
== SUBMITION (2019-04-05 10:16:22) 
-- CODE:
idade=int(input("digite a idade:"))
if(idade>=18):
	print(eleitor)
else:
	print(nao_eleitor)
-- EXECUTION TIME:
0.132349
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/2703/main.py", line 5, in <module>
    print(nao_eleitor)
NameError: name 'nao_eleitor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 10:16:41) 
-- CODE:
idade=int(input("digite a idade:"))
if(idade>=18):
	print(eleitor)
else:
	print(nao_eleitor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(nao_eleitor)
NameError: name 'nao_eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 10:17:14) 
-- CODE:
idade=int(input("digite a idade:"))
if(idade>=18):
	print(eleitor)
else:
	print(nao-eleitor)
-- EXECUTION TIME:
0.180732
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/2703/main.py", line 5, in <module>
    print(nao-eleitor)
NameError: name 'nao' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 10:17:22) 
-- CODE:
idade=int(input("digite a idade:"))
if(idade>=18):
	print(eleitor)
else:
	print(nao-eleitor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(nao-eleitor)
NameError: name 'nao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 10:17:38) 
-- CODE:
idade=int(input("digite a idade:"))
if(idade>=18):
	print(eleitor)
else:
	print(naoeleitor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(naoeleitor)
NameError: name 'naoeleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 10:18:33) 
-- CODE:
idade=int(input("digite a idade:"))
if(idade>=18):
	print("eleitor")
else:
	print("naoe_leitor")
-- EXECUTION TIME:
0.174839
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
naoe_leitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 10:18:50) 
-- CODE:
idade=int(input("digite a idade:"))
if(idade>=18):
	print("eleitor")
else:
	print("nao_eleitor")
-- EXECUTION TIME:
0.209766
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
